--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             </div>
         </header>
 
+        <div class="totals-container" id="totals-container">
+            </div>
+
         <main>
             <div class="controls">
                 <button id="addItemBtn"><i class="fas fa-plus"></i> Adicionar Item</button>
@@ -62,6 +65,7 @@
             <form id="addItemForm">
                 <input type="text" id="itemName" placeholder="Nome do item (ex: Leite)" required>
                 <input type="text" id="itemQuantity" placeholder="Quantidade (ex: 2 caixas)" required>
+                <input type="number" id="itemPrice" step="0.01" placeholder="Preço (ex: 5.50) - Opcional">
                 <select id="itemCategory" required>
                     <option value="" disabled selected>Selecione a Categoria</option>
                     <option value="Mercearia">🛒 Mercearia</option>
