--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <main>
             <div class="controls">
                 <button id="addItemBtn"><i class="fas fa-plus"></i> Adicionar Item</button>
+                <button id="checkoutBtn" class="checkout-btn"><i class="fas fa-cash-register"></i> Finalizar Compra</button>
                 <div class="filters">
                     <select id="categoryFilter">
                         <option value="all">Todas as Categorias</option>
@@ -45,13 +46,13 @@
             <div id="loading" class="loading-spinner"></div>
             
             <section class="shopping-list">
-                <h2><i class="fas fa-list-check"></i> Itens Pendentes</h2>
+                <h2><i class="fas fa-list-check"></i> Itens da Lista / Carrinho</h2>
                 <div id="pending-list" class="list-container">
                     </div>
             </section>
             
             <section class="shopping-list" id="purchased-section" style="display: none;">
-                <h2><i class="fas fa-check-double"></i> Itens Comprados</h2>
+                <h2><i class="fas fa-check-double"></i> Histórico de Compras</h2>
                 <div id="purchased-list" class="list-container">
                     </div>
             </section>
@@ -65,7 +66,7 @@
             <form id="addItemForm">
                 <input type="text" id="itemName" placeholder="Nome do item (ex: Leite)" required>
                 <input type="text" id="itemQuantity" placeholder="Quantidade (ex: 2 caixas)" required>
-                <input type="number" id="itemPrice" step="0.01" placeholder="Preço (ex: 5.50) - Opcional">
+                <input type="number" id="itemPrice" step="0.01" placeholder="Preço (opcional no início)">
                 <select id="itemCategory" required>
                     <option value="" disabled selected>Selecione a Categoria</option>
                     <option value="Mercearia">🛒 Mercearia</option>
