--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-<body>
+
     <div id="auth-container">
         <div class="auth-box">
             <form id="login-form">
@@ -18,7 +18,6 @@
                 <button type="submit">Entrar</button>
                 <p>Não tem uma conta? <a href="#" id="show-register">Cadastre-se</a></p>
             </form>
-
             <form id="register-form" style="display: none;">
                 <h2>Cadastro</h2>
                 <input type="text" id="register-username" placeholder="Crie um nome de usuário" required>
@@ -30,49 +29,33 @@
     </div>
 
     <div class="app-container" style="display: none;">
-        </div>
-</body>
-    <div class="app-container">
         <header>
             <h1><i class="fas fa-cart-shopping"></i> Lista de Compras</h1>
             <div class="user-display">
-    <span id="currentUserDisplay"></span>
-    <button id="logoutBtn" title="Sair"><i class="fas fa-sign-out-alt"></i></button>
-</div>
+                <span id="currentUserDisplay"></span>
+                <button id="logoutBtn" title="Sair" style="display: none;"><i class="fas fa-sign-out-alt"></i></button>
+            </div>
         </header>
 
-        <div class="totals-container" id="totals-container">
-            </div>
+        <div class="totals-container" id="totals-container"></div>
 
         <main>
             <div class="controls">
                 <button id="addItemBtn"><i class="fas fa-plus"></i> Adicionar Item</button>
                 <button id="checkoutBtn" class="checkout-btn"><i class="fas fa-cash-register"></i> Finalizar Compra</button>
                 <div class="filters">
-                    <select id="categoryFilter">
-                        <option value="all">Todas as Categorias</option>
-                    </select>
-                    <label class="toggle-switch">
-                        <input type="checkbox" id="showPurchasedToggle">
-                        <span class="slider"></span>
-                        Mostrar Comprados
-                    </label>
-                    <button id="exportCsvBtn" title="Exportar para CSV"><i class="fas fa-file-csv"></i> Exportar</button>
+                    <select id="categoryFilter"><option value="all">Todas as Categorias</option></select>
+                    <label class="toggle-switch"><input type="checkbox" id="showPurchasedToggle"><span class="slider"></span> Mostrar Comprados</label>
                 </div>
             </div>
-
             <div id="loading" class="loading-spinner"></div>
-            
             <section class="shopping-list">
                 <h2><i class="fas fa-list-check"></i> Itens da Lista / Carrinho</h2>
-                <div id="pending-list" class="list-container">
-                    </div>
+                <div id="pending-list" class="list-container"></div>
             </section>
-            
             <section class="shopping-list" id="purchased-section" style="display: none;">
                 <h2><i class="fas fa-check-double"></i> Histórico de Compras</h2>
-                <div id="purchased-list" class="list-container">
-                    </div>
+                <div id="purchased-list" class="list-container"></div>
             </section>
         </main>
     </div>
@@ -82,8 +65,8 @@
             <span class="close-btn">&times;</span>
             <h2>Adicionar Novo Item</h2>
             <form id="addItemForm">
-                <input type="text" id="itemName" placeholder="Nome do item (ex: Leite)" required>
-                <input type="text" id="itemQuantity" placeholder="Quantidade (ex: 2 caixas)" required>
+                <input type="text" id="itemName" placeholder="Nome do item" required>
+                <input type="text" id="itemQuantity" placeholder="Quantidade" required>
                 <select id="itemCategory" required>
                     <option value="" disabled selected>Selecione a Categoria</option>
                     <option value="Mercearia">🛒 Mercearia</option>
@@ -92,7 +75,7 @@
                     <option value="Padaria">🥖 Padaria</option>
                     <option value="Bebidas">🥤 Bebidas</option>
                     <option value="Limpeza">🧼 Limpeza</option>
-                    <option value="Higiene">🧴 Higiene</p>
+                    <option value="Higiene">🧴 Higiene</option>
                     <option value="Outros">📦 Outros</option>
                 </select>
                 <button type="submit">Adicionar à Lista</button>
@@ -103,5 +86,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
