--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="app-container" style="display: none;">
-        <header><h1><i class="fas fa-cart-shopping"></i> Lista de Compras</h1><div class="user-display"><span id="currentUserDisplay"></span><button id="logoutBtn" title="Sair" style="display: none;"><i class="fas fa-sign-out-alt"></i></button></div></header>
+        <header><h1><i class="fas fa-cart-shopping"></i> Nossa Lista <3 </h1><div class="user-display"><span id="currentUserDisplay"></span><button id="logoutBtn" title="Sair" style="display: none;"><i class="fas fa-sign-out-alt"></i></button></div></header>
         <div class="totals-container" id="totals-container"></div>
         <main>
             <div class="controls"><button id="addItemBtn"><i class="fas fa-plus"></i> Adicionar Item</button><button id="checkoutBtn" class="checkout-btn"><i class="fas fa-cash-register"></i> Finalizar Compra</button><div class="filters"><select id="categoryFilter"><option value="all">Todas as Categorias</option></select><select id="archiveFilter"><option value="current">Compras Atuais</option></select></div></div>
@@ -37,3 +37,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
