--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nossa Lista </title>
+    <title>Nossa Lista 👨‍👩‍👧‍👦</title>
 
     <link rel="manifest" href="manifest.json">
 
@@ -103,6 +103,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
