--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="app-container" style="display: none;">
         <header>
-            <h1><i class="fas fa-cart-shopping"></i> Nossa Lista</h1>
+            <h1><i class="fas fa-cart-shopping"></i> Nossa Lista 👨‍👩‍👧‍👦</h1>
             <div class="user-display">
                 <span id="currentUserDisplay"></span>
                 <button id="logoutBtn" title="Sair" style="display: none;"><i class="fas fa-sign-out-alt"></i></button>
@@ -103,6 +103,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
